--- a/index.html
+++ b/index.html
@@ -3,63 +3,79 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Student Registration</title>
+  <title>Student Registration — Home</title>
   <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
+  <header class="site-header sticky">
+    <nav class="nav">
+      <a class="brand" href="index.html">StudentHub</a>
+      <ul class="nav-links">
+        <li><a class="nav-link active" href="index.html">Home</a></li>
+        <li><a class="nav-link" href="contact.html">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
+
   <main class="container">
-    <h1>Student Registration</h1>
+    <section id="hero" class="card hero fade-in-up">
+      <h1 class="title deco">Student Registration</h1>
+      <p class="subtitle">Fill the form below to register your mini-project. Click the button to see some JavaScript magic ✨</p>
+      <button id="btnClickMe" class="btn primary">Click Me</button>
+    </section>
 
-    <form id="registrationForm" novalidate>
-      <div class="field">
-        <label for="name">Full Name</label>
-        <input id="name" name="name" type="text" placeholder="e.g., Asha R." aria-required="true"/>
-        <small class="error" id="nameError"></small>
-      </div>
+    <section class="card form-card fade-in-up">
+      <h2>Registration Form</h2>
 
-      <div class="field">
-        <label for="email">Email</label>
-        <input id="email" name="email" type="email" placeholder="you@example.com" aria-required="true"/>
-        <small class="error" id="emailError"></small>
-      </div>
+      <form id="registrationForm" novalidate>
+        <div class="grid">
+          <div class="field">
+            <label for="name">Full Name</label>
+            <input id="name" name="name" type="text" placeholder="e.g., Asha R." aria-required="true"/>
+            <small class="error" id="nameError"></small>
+          </div>
 
-      <div class="field">
-        <label for="dept">Department</label>
-        <select id="dept" name="dept" aria-required="true">
-          <option value="">-- Select Department --</option>
-          <option>IT</option>
-          <option>CSE</option>
-          <option>ECE</option>
-          <option>EEE</option>
-          <option>CIVIL</option>
-          <option>MECH</option>
-        </select>
-        <small class="error" id="deptError"></small>
-      </div>
+          <div class="field">
+            <label for="email">Email</label>
+            <input id="email" name="email" type="email" placeholder="you@example.com" aria-required="true"/>
+            <small class="error" id="emailError"></small>
+          </div>
+        </div>
 
-      <div class="field">
-        <label for="year">Year</label>
-        <select id="year" name="year" aria-required="true">
-          <option value="">-- Select Year --</option>
-          <option>I</option>
-          <option>II</option>
-          <option>III</option>
-          <option>IV</option>
-        </select>
-        <small class="error" id="yearError"></small>
-      </div>
+        <div class="grid">
+          <div class="field">
+            <label for="dept">Department</label>
+            <select id="dept" name="dept" aria-required="true">
+              <option value="">-- Select Department --</option>
+            </select>
+            <small class="error" id="deptError"></small>
+          </div>
 
-      <div class="field">
-        <label for="title">Project Title</label>
-        <input id="title" name="title" type="text" placeholder="e.g., Smart Campus Navigator" aria-required="true"/>
-        <small class="error" id="titleError"></small>
-      </div>
+          <div class="field">
+            <label for="year">Year</label>
+            <select id="year" name="year" aria-required="true">
+              <option value="">-- Select Year --</option>
+            </select>
+            <small class="error" id="yearError"></small>
+          </div>
+        </div>
 
-      <button type="submit">Register</button>
-    </form>
+        <div class="field">
+          <label for="title">Project Title</label>
+          <input id="title" name="title" type="text" placeholder="e.g., Smart Campus Navigator" aria-required="true"/>
+          <small class="error" id="titleError"></small>
+        </div>
 
-    <p class="hint">On successful validation, you'll see an alert saying <strong>Registration Successful</strong>.</p>
+        <button type="submit" class="btn primary">Register</button>
+      </form>
+
+      <p class="hint">On successful validation, you'll see an alert saying <strong>Registration Successful</strong>.</p>
+    </section>
   </main>
+
+  <footer class="site-footer">
+    <p>© <span id="yearSpan"></span> StudentHub</p>
+  </footer>
 
   <script src="script.js"></script>
 </body>
