--- a/day4.html
+++ b/day4.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Day 4 — DOM + ES6 Modules</title>
+  <title>DOM + ES6 Modules</title>
   <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
@@ -19,7 +19,7 @@
   </header>
 <main class="container">
   <section class="card">
-    <h1 class="title">Day 4 — DOM Manipulation + ES6 Modules</h1>
+    <h1 class="title">DOM Manipulation + ES6 Modules</h1>
     <p class="subtitle">Three small demos you can open below. These files are safe to add alongside your Day 3 project.</p>
     <div class="grid">
       <div class="simple-card">
