--- a/day4.html
+++ b/day4.html
@@ -12,7 +12,7 @@
       <a class="brand" href="index.html">StudentHub</a>
       <ul class="nav-links">
         <li><a class="nav-link" href="index.html">Home</a></li>
-        <li><a class="nav-link active" href="day4.html">Day 4</a></li>
+        <li><a class="nav-link active" href="day4.html">DOM</a></li>
         <li><a class="nav-link" href="contact.html">Contact</a></li>
       </ul>
     </nav>
