--- a/cards.html
+++ b/cards.html
@@ -28,6 +28,6 @@
     <div id="cardContainer"></div>
   </section>
 </main>
-<script src="cards.js"></script>
+<script src="./cards.js"></script>
 </body>
 </html>
