--- a/contact.html
+++ b/contact.html
@@ -55,6 +55,6 @@
     <p>© <span id="yearSpan"></span> StudentHub</p>
   </footer>
 
-  <script src="script.js"></script>
+  <script src="./script.js"></script>
 </body>
 </html>
