--- a/index.html
+++ b/index.html
@@ -77,6 +77,6 @@
     <p>© <span id="yearSpan"></span> StudentHub</p>
   </footer>
 
-  <script src="script.js"></script>
+  <script src="./script.js"></script>
 </body>
 </html>
