--- a/modules-demo.html
+++ b/modules-demo.html
@@ -23,6 +23,6 @@
     <div id="results" class="simple-card"></div>
   </section>
 </main>
-<script type="module" src="modules-main.js"></script>
+<script type="module" src="./modules-main.js"></script>
 </body>
 </html>
