--- a/profiles.html
+++ b/profiles.html
@@ -27,6 +27,6 @@
     <div id="profiles"></div>
   </section>
 </main>
-<script type="module" src="main.js"></script>
+<script type="module" src="./main.js"></script>
 </body>
 </html>
