--- a/index.html
+++ b/index.html
@@ -1,82 +1,77 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Student Registration — Home</title>
-  <link rel="stylesheet" href="style.css"/>
-</head>
-<body>
-  <header class="site-header sticky">
-    <nav class="nav">
-      <a class="brand" href="index.html">StudentHub</a>
-      <ul class="nav-links">
-        <li><a class="nav-link active" href="index.html">Home</a></li>
-        <li><a class="nav-link" href="contact.html">Contact</a></li>
-      </ul>
-    </nav>
-  </header>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Student Management (Static Demo)</title>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
+    <div class="container">
+      <header class="header">
+        <h1>Student Management</h1>
+        <p class="subtitle">Day 9 — React + Node + MongoDB (Mimicked in plain HTML/CSS/JS)</p>
+      </header>
 
-  <main class="container">
-    <section id="hero" class="card hero fade-in-up">
-      <h1 class="title deco">Student Registration</h1>
-      <p class="subtitle">Fill the form below to register your mini-project. Click the button to see some JavaScript magic ✨</p>
-      <button id="btnClickMe" class="btn primary">Click Me</button>
-    </section>
-
-    <section class="card form-card fade-in-up">
-      <h2>Registration Form</h2>
-
-      <form id="registrationForm" novalidate>
-        <div class="grid">
-          <div class="field">
-            <label for="name">Full Name</label>
-            <input id="name" name="name" type="text" placeholder="e.g., Asha R." aria-required="true"/>
-            <small class="error" id="nameError"></small>
+      <section class="card">
+        <h2 id="formTitle">Add Student</h2>
+        <form id="studentForm">
+          <input type="hidden" id="editId" value="" />
+          <div class="grid">
+            <div class="field">
+              <label for="name">Name</label>
+              <input id="name" placeholder="Anu" required />
+            </div>
+            <div class="field">
+              <label for="rollNo">Roll No</label>
+              <input id="rollNo" placeholder="22IT001" required />
+            </div>
+            <div class="field">
+              <label for="department">Department</label>
+              <input id="department" placeholder="IT" required />
+            </div>
+            <div class="field">
+              <label for="marks">Marks</label>
+              <input id="marks" type="number" min="0" max="100" placeholder="88" required />
+            </div>
           </div>
-
-          <div class="field">
-            <label for="email">Email</label>
-            <input id="email" name="email" type="email" placeholder="you@example.com" aria-required="true"/>
-            <small class="error" id="emailError"></small>
+          <div class="actions">
+            <button type="submit" class="btn primary" id="submitBtn">Add</button>
+            <button type="button" class="btn" id="cancelEdit" hidden>Cancel</button>
           </div>
+          <p class="hint">This demo stores data in your browser (localStorage). No backend required.</p>
+        </form>
+        <div id="message" role="status" aria-live="polite"></div>
+      </section>
+
+      <section class="card">
+        <div class="tableHeader">
+          <h2>Students <span id="count">(0)</span></h2>
+          <input id="search" class="search" placeholder="Search by name / roll / dept..." />
         </div>
-
-        <div class="grid">
-          <div class="field">
-            <label for="dept">Department</label>
-            <select id="dept" name="dept" aria-required="true">
-              <option value="">-- Select Department --</option>
-            </select>
-            <small class="error" id="deptError"></small>
-          </div>
-
-          <div class="field">
-            <label for="year">Year</label>
-            <select id="year" name="year" aria-required="true">
-              <option value="">-- Select Year --</option>
-            </select>
-            <small class="error" id="yearError"></small>
-          </div>
+        <div class="tableWrap">
+          <table>
+            <thead>
+              <tr>
+                <th>Name</th>
+                <th>Roll No</th>
+                <th>Department</th>
+                <th>Marks</th>
+                <th>Actions</th>
+              </tr>
+            </thead>
+            <tbody id="tbody">
+              <!-- rows render here -->
+            </tbody>
+          </table>
         </div>
+      </section>
 
-        <div class="field">
-          <label for="title">Project Title</label>
-          <input id="title" name="title" type="text" placeholder="e.g., Smart Campus Navigator" aria-required="true"/>
-          <small class="error" id="titleError"></small>
-        </div>
+      <footer class="footer">
+        <p>Simulated API: <code>GET/POST/PUT/DELETE /api/students</code> → implemented via <code>localStorage</code> for demo.</p>
+      </footer>
+    </div>
 
-        <button type="submit" class="btn primary">Register</button>
-      </form>
-
-      <p class="hint">On successful validation, you'll see an alert saying <strong>Registration Successful</strong>.</p>
-    </section>
-  </main>
-
-  <footer class="site-footer">
-    <p>© <span id="yearSpan"></span> StudentHub</p>
-  </footer>
-
-  <script src="./script.js"></script>
-</body>
+    <script src="app.js"></script>
+  </body>
 </html>
